# smltown

./: .bazelrc  .env  .gitignore  BUILD.bazel  MODULE.bazel  README.md  WORKSPACE  deps.bzl  docker-compose.yml
awscdk/: cdk.context.json  cdk.json  package-lock.json  package.json
awscdk/lib/: awscdk-stack.ts  resource-initializer.ts  smltown-stack.ts
crud_service/: .env  BUILD.bazel  endpoint.go  go.mod  go.sum  logger.go  main.go  service.go  transport.go
crud_service/cmd/: BUILD.bazel  main.go
crud_service/post/: BUILD.bazel  dynamo_repository.go  filter_service_repository.go  post.go  repository.go
crud_service/profile/: BUILD.bazel
crud_service/protos/: filter_service.pb.go
crud_service/service/: BUILD.bazel  endpoint.go  logger.go  service.go  transport.go
crud_service/user/: BUILD.bazel  repository.go  user.go
filter_service/: BUILD.bazel  dynamo_repository.cc  dynamo_repository.h  filter_service.cc  grpc_server.h  phtree_posts.h
filter_service/phtree/: BUILD.bazel
filter_service/phtree/common/: BUILD.bazel  tree_stats.h
filter_service/phtree/v16/: BUILD.bazel  entry.h  for_each_hc.h  iterator_base.h  node.h
filter_service/phtree_example/: BUILD  example.cc
filter_service/phtree_test/: BUILD  phtree_test.cc
get-posts/phtree/: phtree_multimap.h
get-posts/phtree-test/: BUILD  forefinder.cc
get-posts/phtree/v16/: phtree_v16.h
ory/: .gitignore  docker-compose.yml
ory/kratos/: BUILD.bazel  dockerfile  identity.schema.json
ory/kratos-production/: BUILD.bazel
ory/postgres-data/: postmaster.pid
ory/postgres-data/base/1/: 2619  2696  2840  2841  pg_internal.init
ory/postgres-data/base/16384/: 1247  1247_fsm  1249  1249_fsm  1259  1259_fsm  1259_vm  16385  16389  16390  16391  16394  16400  16401  16403  16406  16408  16413  16414  16429  16437  16437_fsm  16442  16443  16457  16457_fsm  16462  16463  16482  16483  16494  16505  16506  16512  16513  16520  16536  16537  16551  16552  (+97 more)
ory/postgres-data/base/4/: 2619
ory/postgres-data/base/5/: pg_internal.init
ory/postgres-data/global/: 1260  1262  2671  2676  pg_control  pg_internal.init
ory/postgres-data/pg_multixact/members/: 0000
ory/postgres-data/pg_xact/: 0000
protos/: BUILD.bazel  filter_service.proto  get-posts.proto
sveltekit/: Dockerfile  package-lock.json  package.json  svelte.config.js  tailwind.config.cjs  vite.config.ts
sveltekit/src/: app.css  app.d.ts  app.html  hooks.server.ts
sveltekit/src/lib/: app.css  auth.ts  config.ts  types.ts  utils.ts
sveltekit/src/lib/components/: create-post-button.svelte  create-post-form.svelte  create-user-button.svelte  enable-geolocation-button.svelte  login-button.svelte  nav-search.svelte  post-range-slider.svelte  post.svelte  profile-button.svelte  signup-button.svelte  verify-email-button.svelte
sveltekit/src/lib/components/auth/: button-submit.svelte  input-text.svelte  messages.svelte
sveltekit/src/lib/components/icons/: smltown-icon.svelte
sveltekit/src/lib/icons/: down-arrow-icon.svelte  hamburger-menu-icon.svelte  profile-icon.svelte  smltown-icon.svelte  up-arrow-icon.svelte
sveltekit/src/lib/server/: auth.ts
sveltekit/src/lib/stores/: enable-geolocation-modal.ts  geolocation.ts  login-modal.ts
sveltekit/src/routes/: +layout.server.ts  +layout.svelte  +page.server.ts  +page.svelte
sveltekit/src/routes/(app)/: +layout.server.ts  +layout.svelte  +page.server.ts  +page.svelte
sveltekit/src/routes/(app)/profile/[username]/: +page.server.ts
sveltekit/src/routes/(authentication)/login/: +page.server.ts  +page.svelte
sveltekit/src/routes/(authroutes)/: +layout.svelte
sveltekit/src/routes/(authroutes)/error/: +page.svelte
sveltekit/src/routes/admin/: +layout.server.ts  +layout.svelte  +page.server.ts
sveltekit/src/routes/admin/posts/: +page.server.ts  +page.svelte
sveltekit/src/routes/admin/users/: +page.server.ts  +page.svelte
sveltekit/src/routes/error/: +page.server.ts
sveltekit/src/routes/health/: +server.ts
sveltekit/src/routes/login/: +page.server.ts
sveltekit/src/routes/self-service/verification/: +server.ts
sveltekit_old/src/: app.css
sveltekit_old/src/lib/components/icons/: profile-icon.svelte  smltown-icon.svelte
sveltekit_old/src/routes/: +layout.svelte
