load("@bazel_gazelle//:def.bzl", "gazelle")

# gazelle:prefix github.com/tommycalvy/smltown
# gazelle:exclude crud_service/protos
# gazelle:exclude external
gazelle(name = "gazelle")

gazelle(
    name = "gazelle-update-repos",
    args = [
        "-from_file=crud_service/go.mod",
        "-to_macro=deps.bzl%go_dependencies",
        "-prune",
        "-build_file_proto_mode=disable_global",
    ],
    command = "update-repos",
)

package(default_visibility = ["//visibility:public"])

platform(
    name = "linux_arm64",
    exec_compatible_with = [
        "@platforms//os:linux",
        "@platforms//cpu:aarch64",
    ],
)
