load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_binary")

go_library(
    name = "crud_service_lib",
    srcs = ["main.go"],
    importpath = "github.com/tommycalvy/smltown/crud_service",
    visibility = ["//visibility:public"],
    deps = [
        "//crud_service/post",
        "//crud_service/service",
        "//crud_service/user",
        "@com_github_go_kit_log//:log",
    ],
)

go_binary(
    name = "crud_service",
    embed = [":crud_service_lib"],
    visibility = ["//visibility:public"],
)