load("@rules_cc//cc:defs.bzl", "cc_binary")
load("@io_bazel_rules_docker//cc:image.bzl", "cc_image")

package(default_visibility = ["//visibility:public"])

cc_binary(
    name = "filter_service",
    srcs = [
        "dynamo_repository.h",
        "filter_service.cc",
        "grpc_server.h",
        "phtree_posts.h",
    ],
    deps = [
        "//protos:cpp_protos",
        "@aws-sdk-cpp//:core",
        "@aws-sdk-cpp//:dynamodb",
        "@phtree",
    ],
)

cc_image(
    name = "image",
    binary = ":filter_service",
    platforms = {
        "//conditions:default": "linux/amd64",
        "//conditions:linux_arm64": "linux/arm64",
    },
)


