load("@rules_cc//cc:defs.bzl", "cc_binary")
load("@io_bazel_rules_docker//container:image.bzl", "container_image")

package(default_visibility = ["//visibility:public"])

cc_binary(
    name = "filter_service",
    srcs = [
        "dynamo_repository.h",
        "filter_service.cc",
        "grpc_server.h",
        "phtree_posts.h",
    ],
    deps = [
        "//protos:cpp_protos",
        "@aws-sdk-cpp//:core",
        "@aws-sdk-cpp//:dynamodb",
        "@phtree",
    ],
)

container_image(
    name = "amazon_image",
    architecture = "arm64",
    base = "@amazonlinux//image",
    entrypoint = ["/filter_service"],
    files = [":filter_service"],
    operating_system = "linux",
)
