load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "cmd_lib",
    srcs = ["main.go"],
    importpath = "github.com/tommycalvy/smltown/crud_service/cmd",
    visibility = ["//visibility:private"],
    deps = [
        "//crud_service",
        "//crud_service/post",
        "//crud_service/user",
        "@com_github_go_kit_log//:log",
    ],
)

go_binary(
    name = "cmd",
    embed = [":cmd_lib"],
    visibility = ["//visibility:public"],
)
