load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

go_proto_library(
    name = "filter_service_go_proto",
    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    importpath = "github.com/tommycalvy/smltown/crud_service/protos",
    proto = "//protos:filter_service_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "protos",
    embed = [":filter_service_go_proto"],
    importpath = "github.com/tommycalvy/smltown/crud_service/protos",
    visibility = ["//visibility:public"],
)

go_library(
    name = "post",
    srcs = [
        "dynamo_repository.go",
        "filter_service_repository.go",
        "post.go",
    ],
    importpath = "github.com/tommycalvy/smltown/crud_service/post",
    visibility = ["//visibility:public"],
    deps = [
        ":protos",
        "@com_github_aws_aws_sdk_go_v2//aws",
        "@com_github_aws_aws_sdk_go_v2_config//:config",
        "@com_github_aws_aws_sdk_go_v2_feature_dynamodb_attributevalue//:attributevalue",
        "@com_github_aws_aws_sdk_go_v2_service_dynamodb//:dynamodb",
        "@com_github_aws_aws_sdk_go_v2_service_dynamodb//types",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//credentials/insecure",
    ],
)
