load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "profile",
    srcs = [
        "profile.go",
        "repository.go",
    ],
    importpath = "github.com/example/project/crud-service/profile",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_aws_aws_sdk_go//aws:go_default_library",
        "@com_github_aws_aws_sdk_go//aws/session:go_default_library",
        "@com_github_aws_aws_sdk_go//service/dynamodb:go_default_library",
        "@com_github_aws_aws_sdk_go//service/dynamodb/dynamodbattribute:go_default_library",
        "@com_github_aws_aws_sdk_go//service/dynamodb/expression:go_default_library",
    ],
)
