load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "profile",
    srcs = [
        "profile.go",
        "repository.go",
    ],
    importpath = "github.com/tommycalvy/smltown/crud_service/profile",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_aws_aws_sdk_go//aws",
        "@com_github_aws_aws_sdk_go//aws/session",
        "@com_github_aws_aws_sdk_go//service/dynamodb",
        "@com_github_aws_aws_sdk_go//service/dynamodb/dynamodbattribute",
        "@com_github_aws_aws_sdk_go//service/dynamodb/expression",
    ],
)
