load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "user",
    srcs = [
        "repository.go",
        "user.go",
    ],
    importpath = "github.com/example/project/crud-service/user",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_aws_aws_sdk_go_v2//aws:go_default_library",
        "@com_github_aws_aws_sdk_go_v2_config//:go_default_library",
        "@com_github_aws_aws_sdk_go_v2_feature_dynamodb_attributevalue//:go_default_library",
        "@com_github_aws_aws_sdk_go_v2_service_dynamodb//:go_default_library",
        "@com_github_aws_aws_sdk_go_v2_service_dynamodb//types:go_default_library",
    ],
)
