load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "user",
    srcs = [
        "repository.go",
        "user.go",
    ],
    importpath = "github.com/tommycalvy/smltown/crud_service/user",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_aws_aws_sdk_go_v2//aws",
        "@com_github_aws_aws_sdk_go_v2_config//:config",
        "@com_github_aws_aws_sdk_go_v2_feature_dynamodb_attributevalue//:attributevalue",
        "@com_github_aws_aws_sdk_go_v2_service_dynamodb//:dynamodb",
        "@com_github_aws_aws_sdk_go_v2_service_dynamodb//types",
    ],
)
