load("@rules_cc//cc:defs.bzl", "cc_library")
package(default_visibility = ["//visibility:public"])

cc_library(
    name = "phtree",
    srcs = [
    ],
    hdrs = [
        "converter.h",
        "distance.h",
        "filter.h",
        "phtree.h",
        "phtree_multimap.h",
    ],
    linkstatic = True,
    visibility = [
        "//visibility:public",
    ],
    include_prefix = "phtree/",
    deps = [
        "//filter_service/phtree/common",
        "//filter_service/phtree/v16",
    ],
)
