load("@io_bazel_rules_docker//container:image.bzl", "container_image")

container_image(
    name = "amazon_image",
    base = "@orydkratos//image",
    files = [
        "admin.json",
        "kratos-production.yml",
        "identity.schema.json",
    ],
    directory = "/home/ory",
    architecture = "arm64",
    operating_system = "linux",
    ports = ["4433", "4434"],
)

container_image(
    name = "local_image",
    base = "@orydkratos//image",
    files = [
        "admin.json",
        "kratos.yml",
        "identity.schema.json",
    ],
    directory = "/home/ory",
    architecture = "arm64",
    operating_system = "linux",
    ports = ["4433", "4434"],
)