load("@rules_cc//cc:defs.bzl", "cc_library")

cc_library(
    name = "common",
    srcs = [
    ],
    hdrs = [
        "b_plus_tree_hash_map.h",
        "b_plus_tree_map.h",
        "base_types.h",
        "bits.h",
        "common.h",
        "debug_helper.h",
        "flat_array_map.h",
        "flat_sparse_map.h",
        "tree_stats.h",
    ],
    visibility = [
        "//visibility:public",
    ],
    deps = [
    ],
)
