load("@rules_cc//cc:defs.bzl", "cc_library")

cc_library(
    name = "v16",
    srcs = [
    ],
    hdrs = [
        "debug_helper_v16.h",
        "entry.h",
        "for_each.h",
        "for_each_hc.h",
        "iterator_base.h",
        "iterator_full.h",
        "iterator_hc.h",
        "iterator_knn_hs.h",
        "iterator_with_parent.h",
        "node.h",
        "phtree_v16.h",
    ],
    visibility = [
        "//visibility:public",
    ],
    deps = [
        "//filter_service/phtree/common",
    ],
)
